# cuda-fire-sim

./: .gitignore  CMakeLists.txt  README.md  cuda_python.cu  example.cu  helpers.h  main.cu  main.h  np_config.hpp  pythonHelpers.h  test.cpp  test_sim.py
